# contextpilot

./: .cursorrules  .dockerignore  .firebaserc  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HOW_IT_WORKS.md  LICENSE  OVERVIEW.md  README.md  SETUP_GUIDE.md  analyze_db.py  cloudbuild.yaml  firebase.json  firestore.indexes.json  firestore.rules  launch-app.command  mcp_remote_client.py  requirements.txt  run_api.py  run_mcp.py
backend/: __init__.py  api_keys.py  billing.py  config.py  crawl_manager.py  crawl_planner.py  data_manager.py  db.py  discovery_agent.py  embed_manager.py  entitlements.py  evaluation.py  firestore_db.py  genai_client.py  job_queue.py  mcp_server.py  models.py  normalizer.py  path_patterns.py  quality_metrics.py  query_processor.py  reranker.py  robots_parser.py  scheduler.py  search_agent.py  sitemap_parser.py  source_registry.py  tenant_context.py  vector_store.py  websocket_manager.py
backup_normalized/: gemini_models_normalized.md  openai_models_normalized.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/crawl/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: navigation.tsx
frontend/src/components/ui/: progress.tsx
scripts/: deploy.sh  migrate_to_firestore.py
(+10 files in other folders)
